--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>This is a GIT TEST</h1>
+
+    <h2>First text</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex aliquid unde totam! Consequatur tempora est, a fuga optio voluptatem repellendus iure vitae molestias aliquam ducimus praesentium ab voluptates saepe?</p>
 </body>
 </html>
