--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>This is a GIT TEST</h1>
+
+    <h2>Second Text</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quos odio aliquid magni vitae. Quod porro facere, reiciendis vitae vel sunt laborum quaerat debitis, esse reprehenderit molestias. Impedit, ducimus tempora?</p>
 </body>
 </html>
