--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <h2>First text</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex aliquid unde totam! Consequatur tempora est, a fuga optio voluptatem repellendus iure vitae molestias aliquam ducimus praesentium ab voluptates saepe?</p>
+    <p>Next first text !!!</p>
+
+
 </body>
 </html>
