Revert "new first text"
This reverts commit 21dbfd32b069337c4c241a2a4a0e8edccd639e7f.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
     <h2>First text</h2>
 
-    <p>Next first text !!!</p>
-
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex aliquid unde totam! Consequatur tempora est, a fuga optio voluptatem repellendus iure vitae molestias aliquam ducimus praesentium ab voluptates saepe?</p>
 </body>
 </html>
